Replaced firebase with localStorage + code refactor

--- a/src/options.html
+++ b/src/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="options.css">
+    <link rel="stylesheet" href="./style/options.css">
     <meta charset="utf-8"/>
   </head>
   <body>
@@ -31,69 +31,6 @@
       <div id="chartclicksPercalendarWeek" class="chart">
         <div class="loader"></div>
       </div>  
-    </div>
-    <h1>Total duration</h1>
-    <div class="chartContainer" style="background-color: rgb(202, 202, 202);">
-      <div id="charttotaldurationPerday" class="chart">
-        <div class="loader"></div>
-      </div>
-      <div id="charttotaldurationPertestWeek" class="chart">
-        <div class="loader"></div>
-      </div>  
-    </div>
-    <h1>Total scrolls</h1>
-    <div class="chartContainer" style="background-color: rgb(202, 202, 202);">
-      <div id="charttotalscrollsPerday" class="chart">
-        <div class="loader"></div>
-      </div>
-      <div id="charttotalscrollsPertestWeek" class="chart">
-        <div class="loader"></div>
-      </div>  
-    </div>
-    <h1>Total clicks</h1>
-    <div class="chartContainer" style="background-color: rgb(202, 202, 202);">
-      <div id="charttotalclicksPerday" class="chart">
-        <div class="loader"></div>
-      </div>
-      <div id="charttotalclicksPertestWeek" class="chart">
-        <div class="loader"></div>
-      </div>  
-    </div>
-    <h1>Scrolls/Duration</h1>
-    <div class="chartContainer" style="background-color: rgb(202, 202, 202);">
-      <div id="charttotalscrollsdurationPertestWeek" class="chart">
-        <div class="loader"></div>
-      </div>  
-      <div id="charttotalclicksdurationPertestWeek" class="chart">
-        <div class="loader"></div>
-      </div>
-    </div>
-    <h1>Box plots Facebook</h1>
-    <div class="chartContainer" style="background-color: rgb(202, 202, 202);">
-      <div id="boxPlotFBscroll" class="chart">
-        <div class="loader"></div>
-      </div>  
-      <div id="boxPlotFBclick" class="chart">
-        <div class="loader"></div>
-      </div>
-    </div>
-    <h1>Box plots YouTube</h1>
-    <div class="chartContainer" style="background-color: rgb(202, 202, 202);">
-      <div id="boxPlotYTscroll" class="chart">
-        <div class="loader"></div>
-      </div>  
-      <div id="boxPlotYTclick" class="chart">
-        <div class="loader"></div>
-      </div>
-    </div>
-    <h1>Box plots Duration</h1>
-    <div class="chartContainer" style="background-color: rgb(202, 202, 202);">
-      <div id="boxPlotYTDuration" class="chart">
-        <div class="loader"></div>
-      </div>  
-      <div id="boxPlotFBDuration" class="chart">
-        <div class="loader"></div>
-      </div>
     </div>
   </body>
   <footer>
