Support to dark mode + code refactor

--- a/src/options.html
+++ b/src/options.html
@@ -36,8 +36,8 @@
   <footer>
     <div>Charts made by <a href="https://apexcharts.com/" title="ApexCharts">ApexCharts</a></div>
   </footer>
-  <script src="apexcharts.js"></script>
+  <script src="./lib/apexcharts.js"></script>
   <script src="options.js"></script>
-  <script src="dayjs.min.js"></script>
-  <script src="moment.min.js"></script>
+  <script src="./lib/dayjs.min.js"></script>
+  <script src="./lib/moment.min.js"></script>
 </html>
