--- a/src/popup.html
+++ b/src/popup.html
@@ -36,7 +36,7 @@
             <div class='status'><span id='status'></span></div>
         </div>
         <script src='popup.js'></script>
-        <script src='dayjs.min.js'></script>
+        <script src='./lib/dayjs.min.js'></script>
     </body>
     <footer>
         <div style="font-size: 10px; margin-top: 5px">Icons made by <em>Freepik</em> from <em>www.flaticon.com</em></div>
