Refactor stats tracking

--- a/src/options.html
+++ b/src/options.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Time spent on different sites</h1>
     <div id="chartDuration" class="chartContainer">
-      <div id="chartdurationPerday" class="chart">
+      <div id="chartdurationPerdate" class="chart">
         <div class="loader"></div>
       </div>
       <div id="chartdurationPercalendarWeek" class="chart">
@@ -16,7 +16,7 @@
     </div>
     <h1>Number of scrolls on different sites</h1>
     <div id="chartScroll" class="chartContainer">
-      <div id="chartscrollsPerday" class="chart">
+      <div id="chartscrollsPerdate" class="chart">
         <div class="loader"></div>
       </div>
       <div id="chartscrollsPercalendarWeek" class="chart">
@@ -25,7 +25,7 @@
     </div>
     <h1>Number of clicks on different sites</h1>
     <div id="chartClicks" class="chartContainer">
-      <div id="chartclicksPerday" class="chart">
+      <div id="chartclicksPerdate" class="chart">
         <div class="loader"></div>
       </div>
       <div id="chartclicksPercalendarWeek" class="chart">
