--- a/src/popup.html
+++ b/src/popup.html
@@ -31,7 +31,7 @@
                 <label for='FBhome'><input type='checkbox' id='FBhome' name='FBhome'></input>Custom home page</label>
                 <label for='FBscrolling'><input type='checkbox' id='FBscrolling' name='FBscrolling'></input>Manage infinite scrolling</label>
               </fieldset>
-                <input type='button' id='options-save' value='Save'></input>
+                <input type='button' id='options-save' value='Save' style='width: 100%'></input>
             </form>
             <div class='status'><span id='status'></span></div>
         </div>
