Fix to clearVideoPlayer youtube and popup

--- a/src/popup.html
+++ b/src/popup.html
@@ -33,7 +33,7 @@
               </fieldset>
                 <input type='button' id='options-save' value='Save' style='width: 100%'></input>
             </form>
-            <div class='status'><span id='status'></span></div>
+            <div class='status' id='status' style="display: none;"><span>Options saved! Reload for them to take effect</span></div>
         </div>
         <script src='popup.js'></script>
         <script src='./lib/dayjs.min.js'></script>
